# ComfyUI-StringsAndThings

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  strings_and_things.py
.github/workflows/: publish.yml
Example workflows/: Apply Mosaic Effect demo.json  Image difference demo.json  Regional prompting with Strings and Things metadata demo.json  Text embeddings interrogator demo.json
